--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
 h1{
     color:chartreuse;
 }
+
+p{
+    color:darkgreen
+}
+.container{
+    width: 500px;
+    background-color: hsl(0, 100%, 50%);
+    margin: auto;
+    padding: 20px;
+}
