--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body{
+background-color:#eeeeee;
+
+}
+
 h1{
     color:chartreuse;
 }
@@ -7,7 +12,9 @@ p{
 }
 .container{
     width: 500px;
-    background-color: hsl(0, 100%, 50%);
-    margin: auto;
+    background-color: ;
+    margin:30px auto;
     padding: 20px;
+    border:4px solid #666666;
+    border-radius: 10px;
 }
