--- a/style.css
+++ b/style.css
@@ -15,10 +15,24 @@ img{
    max-width: 100%;
 }
 .container{
-    width: 500px;
-    background-color: ;
+    width: 700px;
+    background-color:snow ;
     margin:30px auto;
     padding: 20px;
     border:4px solid #666666;
     border-radius: 10px;
+}
+
+.content{
+width: 500px;
+float: left;
+}
+
+.sidebar{
+width:200px;
+float: right;
+}
+
+.clear {
+    clear: both;
 }
