--- a/style.css
+++ b/style.css
@@ -52,3 +52,13 @@ float: right;
     
 }
 
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+
