--- a/style.css
+++ b/style.css
@@ -1,43 +1,44 @@
-body{
-background-color:#eeeeee;
+body {
+    background-color: #eeeeee;
 
 }
 
-h1{
-    color:chartreuse;
+h1 {
+    color: chartreuse;
 }
 
-p{
-    color:darkgreen
+p {
+    color: darkgreen
 }
 
-img{
-   max-width: 100%;
+img {
+    max-width: 100%;
 }
-.container{
+
+.container {
     width: 700px;
-    background-color:snow ;
-    margin:30px auto;
+    background-color: snow;
+    margin: 30px auto;
     padding: 20px;
-    border:4px solid #666666;
+    border: 4px solid #666666;
     border-radius: 10px;
 }
 
-.content{
-width: 500px;
-float: left;
+.content {
+    width: 500px;
+    float: left;
 }
 
-.sidebar{
-width:200px;
-float: right;
+.sidebar {
+    width: 200px;
+    float: right;
 }
 
 .clear {
     clear: both;
 }
 
-.topnav{
+.topnav {
     background-color: #333;
     overflow: hidden;
 }
@@ -49,16 +50,35 @@ float: right;
     text-align: center;
     text-decoration: none;
     font-weight: bold;
-    
+
 }
 
 .topnav a:hover {
-  background-color: #ddd;
-  color: black;
+    background-color: #ddd;
+    color: black;
 }
 
 .topnav a.active {
-  background-color: #04AA6D;
-  color: white;
+    background-color: #04AA6D;
+    color: white;
 }
 
+
+footer {
+    text-align: center;
+    font-size: 12px;
+    color: #777777;
+    margin-top: 20px;
+    padding-top: 10px;
+}
+
+
+.sidenav a:hover {
+    background-color: #898989;
+    color: black;
+}
+
+.sidenav a.active {
+    background-color: #04AA6D;
+    color: white;
+}
